software/stacks/osdu/routes/ip-only/wellbore/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wellbore-domain-services
  namespace: osdu
spec:
  parentRefs:
    - name: spi-gateway
      namespace: aks-istio-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/os-wellbore-ddms/
      backendRefs:
        - name: wellbore-domain-services
          port: 80
